--- a/views/add_person.erb
+++ b/views/add_person.erb
@@ -9,11 +9,11 @@
   <label for="age">Age</label><br>
   <input type="text" name="age"><br>
   <label for="gender">Gender</label><br>
-  <input type="radio" name="gender" value="male"> Male
-  <input type="radio" name="gender" value="female"> Female<br>
+  <input type="radio" name="gender" value="f" checked> Female
+  <input type="radio" name="gender" value="m"> Male<br>
   <label for="dtgd">Down to get down?</label><br>
-  <input type="radio" name="dtgd" value="true"> Yes
-  <input type="radio" name="dtgd" value="false" checked> No<br>
+  <input type="radio" name="dtgd" value="f" checked> No
+  <input type="radio" name="dtgd" value="t"> Yes<br>
   <label for="phone">Phone number</label><br>
   <input type="text" name="phone"><br>
   <button>Add person</button>
